update osv and unikraft boot time experiments
Signed-off-by: Hugo Lefeuvre <hugo.lefeuvre@manchester.ac.uk>

--- a/examples/unikraft-boottime/unikraft-qemu-boottime.yaml
+++ b/examples/unikraft-boottime/unikraft-qemu-boottime.yaml
@@ -6,6 +6,8 @@ prams:
 inputs:
   - source: hello.patch
     destination: /root/hello.patch
+  - source: solo5.patch
+    destination: /root/solo5.patch
   - source: /etc/resolv.conf
     destination: /etc/resolv.conf
   - source: /etc/environment
@@ -32,13 +34,33 @@ runs:
 
       touch /results.txt
 
+      # patch helloworld application
       cd  /root/.unikraft/app/helloworld
       git apply --ignore-space-change /root/hello.patch
+
+      # patch solo5 platform
+      kraft list pull plat/solo5
+      cd ../../plats/plat-solo5/
+      git checkout 51213c68c03208b547bfc23d02022de87cbbb696
+      git apply /root/solo5.patch
+      cd ../../apps/helloworld
+
+      # enable solo5 platform
+      echo "CONFIG_PLAT_SOLO5=y" >> .config
+      echo "CONFIG_SOLO5_HVT_TENDER=y" >> .config
+
+      # build both KVM and solo5
       make
 
       # QEMU statistics using instrumented VMM
+      echo "QEMU statistics: " > /results.txt
       script -c 'qemu-system-x86_64 -enable-kvm -nographic -nodefaults \
 				-no-reboot -no-user-config -m 2M -kernel \
 				build/helloworld_kvm-x86_64 \
 				-cpu host,migratable=no,+invtsc' -f /tmp/out
+      cat /tmp/out | grep "startup" >> /results.txt
+
+      # solo5 statistics using instrumented VMM
+      echo "solo5 statistics: " >> /results.txt
+      script -c './build/solo5-hvt ./build/helloworld_solo5-x86_64' -f /tmp/out
       cat /tmp/out | grep "startup" >> /results.txt
