--- a/support/dockerfiles/Dockerfile.kraft-ukbench
+++ b/support/dockerfiles/Dockerfile.kraft-ukbench
@@ -4,6 +4,7 @@ RUN set -xe; \
     apt-get update; \
     apt-get install -y \
       build-essential \
+      unzip \
       git; \
     git clone https://github.com/wg/wrk.git /wrk; \
     cd /wrk; \
@@ -13,6 +14,7 @@ FROM unikraft/kraft:staging AS kraft
 
 ARG UK_KRAFT_GITHUB_TOKEN=
 ENV KRAFTRC=/usr/src/unikraft/.kraftrc
+ENV KRAFTCACHE=/usr/src/unikraft/.kraftcache
 
 COPY --from=wrk /wrk/wrk /usr/local/bin/wrk
 
@@ -20,23 +22,32 @@ RUN set -xe; \
     apt-get update; \
     apt-get install -y \
       jq \
+      curl \
       iperf3 \
       procps \
       bridge-utils \
       net-tools \
       bsdcpio; \
     echo "" > $KRAFTRC; \
-    kraft list add https://github.com/lancs-net/unikraft.git; \
+    kraft list add https://github.com/unikraft/unikraft.git; \
     kraft list add https://github.com/lancs-net/lib-lwip.git; \
     kraft list add https://github.com/unikraft/lib-pthread-embedded.git; \
     kraft list add https://github.com/unikraft/lib-newlib.git; \
     kraft list add https://github.com/unikraft/lib-nginx.git; \
     kraft list add https://github.com/unikraft/app-nginx.git; \
     kraft list update; \
-    kraft list pull unikraft@dev-stdout; \
+    kraft list pull unikraft@staging; \
     kraft list pull lib/pthread-embedded@staging; \
     kraft list pull lib/newlib@staging; \
     kraft list pull lib/lwip@staging; \
     kraft list pull lib/nginx@staging; \
     kraft list pull --no-deps app/nginx; \
+    cd /usr/src/unikraft/apps/nginx; \
+    kraft configure \
+      -u unikraft@staging \
+      -u pthread-embedded@staging \
+      -u newlib@staging \
+      -u lwip@staging \
+      -u nginx@staging; \
+    kraft build --no-progress --fast; \
     unset UK_KRAFT_GITHUB_TOKEN
